--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 body{
   margin: 0;
-  background-color: black;
+
 
 }
 .first{
@@ -86,6 +86,110 @@ text-align: center;
     padding-left: 5px;
 
   }
+}
+
+/* page 2 mobile */
+.page_2_mobile{
+  display: none;
+}
+
+@media only screen and (max-width:550px){
+.page_2_mobile{
+  display: block;
+  background-image: url(rain.jpg);
+  background-size: cover;
+  height: 100vh;
+
+}
+
+.mobile2_headbox{
+  display: grid;
+  grid-template-columns: 1fr;
+  text-align: center;
+}
+
+
+
+#mobile2_header{
+  font-family: helvetica;
+  font-size: 35px;
+  letter-spacing: 3px;
+  color: white;
+  text-shadow: 2px 2px 10px black;
+}
+
+.mobile2_publicholder{
+  padding-top: 2vh;
+}
+
+.mobile2_hld1{
+  text-align: center;
+  transition: 0.1s;
+}
+
+.mobile2_hld2{
+  text-align: center;
+  padding-top: 6vh;
+  transition: 0.1s;
+}
+
+
+
+#mobile2_art1{
+  font-family: helvetica;
+  text-decoration: none;
+  text-shadow: 2px 2px 4px black;
+
+  color: white;
+  font-size: 25px;
+  font-weight: lighter;
+  letter-spacing: 1px;
+  padding-bottom: 0.8vh;
+  padding-top: 0.8vh;
+  padding-left: 2vh;
+  padding-right: 2vh;
+  border-width: thin;
+}
+
+.mobile2_hld2:hover{
+  transition: 0.1s;
+  transform: scale(1.1);
+}
+
+.mobile2_hld1:hover{
+  transition: 0.1s;
+  transform: scale(1.1);
+}
+
+.mobile2_button{
+  padding-top: 8vh;
+  text-align: center;
+  transition: 0.2s;
+}
+
+#mobile2_more{
+  font-family: helvetica;
+  font-size: 20px;
+  text-decoration: none;
+  color: #9c9494;
+  border: 2px solid #cfc7b5;
+  padding: 7.5px;
+  border-radius: 5px;
+  transition: 0.2s;
+}
+
+#mobile2_more:hover{
+  transition: 0.3s;
+  color: #cfc7b5;
+}
+
+.mobile2_button:hover{
+  transition: 0.2s;
+  transform: scale(1.05);
+}
+
+
+
 }
 /* Page 2 */
 
@@ -194,97 +298,10 @@ color: white;
 }
 @media only screen and (max-width:550px){
   .page_2{
-    height: 100vh;
-    background-image: url(x5.jpg);
-    background-size: cover;
-
-
+    display: none;
   }
 
 
-  .artist_1{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding-top: 8vh;
-
-  }
-
-
-
-  .border_1{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    background-image: url(w2.jpg);
-    background-size: cover;
-    transition: 0.3s;
-
-
-  }
-
-  #txt_r1{
-
-  font-family: helvetica;
-  width: 180px;
-  font-size: 28px;
-  text-align: center;
-  font-weight: lighter;
-  padding-top: 5vh;
-  color: white;
-  }
-
-  .none_1{
-    text-decoration: none;
-  }
-
-  #txt_avril{
-
-
-  }
-
-  .border_2{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    background-image: url(w1.jpg);
-    transition: 0.3s;
-
-
-  }
-
-  .artist_2{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding-top: 8vh;
-
-
-  }
-
-  #txt_r2{
-    font-family: helvetica;
-    width: 180px;
-    font-size: 28px;
-    text-align: center;
-    font-weight: lighter;
-    padding-top: 5vh;
-    color: white;
-  }
-
-  .border_3{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    background-image: url(w7.jpg);
-    transition: 0.3s;
-
-
-
-  }
-
-  .artist_3{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding-top: 8vh;
-
-
-  }
 
 }
 /* Page 3 */
